--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,13 @@
         "spatie/laravel-ignition": "^2.4"
     },
     "autoload": {
+        "classmap": [
+            "database",
+             "app/Helpers"
+        ],
+        "files": [
+            "app/Helpers/Helpers.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
